--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "buffer": "^6.0.3",
     "@google/genai": "^1.30.0",
-    "react-dom": "^19.2.0",
-    "lucide-react": "^0.554.0"
+    "buffer": "^6.0.3",
+    "cors-anywhere": "^0.4.4",
+    "lucide-react": "^0.554.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
