--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cors-anywhere": "^0.4.4",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
