--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "cors-anywhere": "^0.4.4",
     "framer-motion": "^12.23.24",
+    "idb": "^8.0.3",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
