--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "cors-anywhere": "^0.4.4",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.24",
     "idb": "^8.0.3",
     "lucide-react": "^0.554.0",
